Bring design into this decade and improve CSS

--- a/labels.css
+++ b/labels.css
@@ -3,20 +3,26 @@
 }
 .input span {
   position: absolute;
-  padding: 5px;
-  margin-left: 3px;
-  color: #999;
   z-index: 1;
   cursor: text;
   pointer-events: none;
+  color: #999;
+  /* Input padding + input border */
+  padding: 7px;
+  /* Firefox does not respond well to different line heights. Use padding instead. */
+  line-height: 17px;
+  /* This gives a little gap between the cursor and the label */
+  margin-left: 2px;
 }
 .input input, .input textarea, .input select {
   z-index: 0;
   padding: 6px;
   margin: 0;
   font: inherit;
+  line-height: 17px;
 }
-/* Hack to remove Safari's extra padding. Remove if you don't care about pixel-perfection. */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  .input input, .input textarea, .input select { padding: 4px; }
+.input select {
+  padding: 5px;
+  /* Unfortunately selects don't respond well to padding. They need an explicit height. */
+  height: 31px;
 }
